--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 - Structure: Doctype, Head (metadata), Body (content).
 - Example: <p>Hello, world!</p>
 - Saved with a .html extension and opened in a browser.
+- /var/share/nginx/html/index.html
 
